--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -66,16 +66,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "|Data Science Tools|\n",
-    "|------------------|\n",
+    "| Data Science Tools |\n",
+    "|--------------------|\n",
     "| MySQL |\n",
-    "| PostGresql |\n",
-    "| Jupyter |\n",
+    "| PostgresSQL | \n",
     "| Jupyter Notebook |"
    ]
   },
@@ -83,27 +80,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Below are a few examples of evaluating arithmetic expressions in Python"
+    "###"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This a simple arithmetic expression to mutiply then add integers\n",
     "(3*4)+5"
@@ -111,22 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.3333333333333335"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This will convert 200 minutes to hours by diving by 60\n",
     "200/60"
